# libxdc-zydis

./: .gitignore  CMakeLists.txt  build-win.bat  build-win.py  install_library.ps1  libxdc.h  readme.md
include/: core.h  decoder.h  disassembler.h  libxdc.h  mydbg.h  tnt_cache.h  trace_cache.h
src/: cfg.c  decoder.c  disassembler.c  libxdc.c  mydbg.c  tnt_cache.c  trace_cache.c
